tests/call/int.rev
1() // error: only functions and structures are callable